<resources>
    <string name="app_name">Pomodonut</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_day_view">Day View</string>
    <string name="title_activity_day_view">DayViewActivity</string>
    <string name="title_activity_speech">SpeechActivity</string>
    <string name="text_accelerometer_data">Accel Data</string>
    <string name="text_tap_on_mic">Tap on mic to speak</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="action_speech_recognition">Speech Recognition</string>
    <string name="action_donut">Donut</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="text_event_name">Event Name:</string>
    <string name="text_event_time">Lasting Time:</string>
    <string name="text_hours">HRS</string>
    <string name="text_minutes">MINS</string>
    <string name="text_seconds">SEC</string>
    <string name="action_save">DONE</string>
    <string name="action_edit_event">EDIT</string>
    <string name="toast_start_time_bigger_than_end_time">Your start time is bigger than end time!</string>
</resources>
