<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.neu.madcourse.zhongxiruihao.pomodonut.countdowntimers.CountdownTimersActivity">


    <item
        android:id="@+id/action_day_view"
        android:orderInCategory="100"
        android:title="@string/action_day_view"
        android:icon="@drawable/ic_show_chart_white_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_speech_recognition"
        android:orderInCategory="100"
        android:title="@string/action_speech_recognition"
        android:icon="@drawable/ic_mic_none_white_36dp"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_donut"
        android:orderInCategory="100"
        android:title="@string/action_donut"
        android:icon="@drawable/ic_donut_large_white_36dp"
        app:showAsAction="ifRoom" />

</menu>
