<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.neu.madcourse.zhongxiruihao.pomodonut.editevent.EditEventActivityFragment"
        tools:showIn="@layout/activity_edit_event"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_event_name"
                android:textSize="@dimen/edit_event_text_size"
                android:id="@+id/text_event_name"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_event_text_size"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/text_event_name"
                android:layout_toEndOf="@+id/text_event_name"
                android:inputType="text"
                android:id="@+id/edit_event_name"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_event_time"
                android:textSize="@dimen/edit_event_text_size"
                android:id="@+id/text_event_time"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
                <NumberPicker
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_hours"
                    android:layout_toRightOf="@+id/text_event_time"
                    android:layout_toEndOf="@+id/text_event_time">
                </NumberPicker>
                <TextView
                    style="@style/TimeScaleText"
                    android:text="@string/text_hours"
                    android:id="@+id/text_hours"
                    android:layout_toRightOf="@+id/picker_hours"
                    android:layout_toEndOf="@+id/picker_hours">
                </TextView>
                <NumberPicker
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_minutes"
                    android:layout_toRightOf="@id/text_hours"
                    android:layout_toEndOf="@id/text_hours">
                </NumberPicker>
                <TextView
                    style="@style/TimeScaleText"
                    android:text="@string/text_minutes"
                    android:id="@+id/text_minutes"
                    android:layout_toRightOf="@+id/picker_minutes"
                    android:layout_toEndOf="@+id/picker_minutes">
                </TextView>
                <NumberPicker
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@+id/text_minutes"
                    android:layout_toEndOf="@id/text_minutes"
                    android:id="@+id/picker_seconds">
                </NumberPicker>
                <TextView
                    style="@style/TimeScaleText"
                    android:text="@string/text_seconds"
                    android:id="@+id/text_seconds"
                    android:layout_toRightOf="@+id/picker_seconds"
                    android:layout_toEndOf="@id/picker_seconds">
                </TextView>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
